# InstantDomains

./: README.md  pyproject.toml  requirements.txt
examples/0/: runner.py
examples/1/: startupIdeas.py
examples/2/: basicStartupIdeas.py
instantdomains/: client.py
instantdomains/api/domain_search/: index.py  models.py
