[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "instantdomains"
version = "0.1.7"
authors = [
  { name="Reed Graff", email="rangergraff@gmail.com" },
]
description = "An unofficial Python SDK for instantdomainsearch.com"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/ReedGraff/InstantDomains"
"Bug Tracker" = "https://github.com/ReedGraff/InstantDomains/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}